Archive2/85/4b1ce10ac4c2d5/output
main.cpp:13:11: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
 if(input = "Micaela"){
    ~~~~~~^~~~~~~~~~~
main.cpp:13:11: note: place parentheses around the assignment to silence this warning
 if(input = "Micaela"){
          ^
    (                )
main.cpp:13:11: note: use '==' to turn this assignment into an equality comparison
 if(input = "Micaela"){
          ^
          ==
main.cpp:13:5: error: value of type 'std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >' is not contextually convertible to 'bool'
 if(input = "Micaela"){
    ^~~~~~~~~~~~~~~~~
1 warning and 1 error generated.
